; ModuleID = '/home/carl/AnghaBench/kphp-kdb/vv/extr_vv-tl-parse.c___tl_tcp_raw_msg_store_flush.c'
source_filename = "/home/carl/AnghaBench/kphp-kdb/vv/extr_vv-tl-parse.c___tl_tcp_raw_msg_store_flush.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@TL_OUT_RAW_MSG = common dso_local global i32 0, align 4
@TL_OUT_EXTRA = common dso_local global i32 0, align 4
@TL_OUT = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @__tl_tcp_raw_msg_store_flush to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @__tl_tcp_raw_msg_store_flush() #0 {
  %1 = load i32, i32* @TL_OUT_RAW_MSG, align 4
  %2 = call i32 @assert(i32 %1)
  %3 = load i32, i32* @TL_OUT_EXTRA, align 4
  %4 = call i32 @assert(i32 %3)
  %5 = load i32, i32* @TL_OUT_EXTRA, align 4
  %6 = load i32, i32* @TL_OUT_RAW_MSG, align 4
  %7 = call i32 @tcp_rpc_conn_send(i32 %5, i32 %6, i32 0)
  %8 = load i32, i32* @TL_OUT_RAW_MSG, align 4
  %9 = call i32 @zfree(i32 %8, i32 4)
  %10 = load i32, i32* @TL_OUT_EXTRA, align 4
  %11 = call i32 @flush_later(i32 %10)
  store i64 0, i64* @TL_OUT, align 8
  ret void
}

declare dso_local i32 @assert(i32) #1

declare dso_local i32 @tcp_rpc_conn_send(i32, i32, i32) #1

declare dso_local i32 @zfree(i32, i32) #1

declare dso_local i32 @flush_later(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
